# MandelbrotExplorer

./: CMakeLists.txt  README.md
docs/: C++ Implementation.md  TODOs.md  Versions.md
docs/.obsidian/: workspace.json
src/: Mandelbrot.cpp  Mandelbrot.h  VisualComputer.cpp  VisualComputer.h  main.cpp
